deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-helloworldappv2
  labels:
    app: app-helloworldv2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-helloworldv2
  template:
    metadata:
      labels:
        app: app-helloworldv2
    spec:
      containers:
      - name: c-helloworld
        image: raemondarellano/hello-worldv2:1.0.0
        ports:
        - containerPort: 80
