service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-helloworldv2
spec:
  selector:
    app: app-helloworldv2
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
#      nodePort: 30012
